# django-stubs-regression-test

./: pyproject.toml  setup.cfg
.github/workflows/: lint.yaml
project/: settings.py
project/app/: managers.py  models.py  views.py
project/app/migrations/: 0001_initial.py
project/users/: managers.py  models.py
