[tool.poetry]
name = "django-stubs-regression"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "<4.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
django-stubs = "^1.12.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
